fixed a z-index issue with Feedback popup

--- a/web-app/css/webFeedback.css
+++ b/web-app/css/webFeedback.css
@@ -93,7 +93,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     bottom: 0;
     right: 15px;
     border: 3px solid #f1f1f1;
-    z-index: 9;
+    z-index: 501;
 }
 
 /* Add styles to the form container */
